tests/fixtures/valid/array_map_example.avsc
{
  "type": "record",
  "name": "Container",
  "fields": [
    {
      "name": "items",
      "type": {
        "type": "array",
        "items": "string"
      }
    },
    {
      "name": "metadata",
      "type": {
        "type": "map",
        "values": "long"
      }
    }
  ]
}
