tests/fixtures/invalid/invalid_default_boolean.avsc
{
  "type": "record",
  "name": "BadBooleanDefault",
  "fields": [
    {
      "name": "flag",
      "type": "boolean",
      "default": "yes"
    }
  ]
}
